# sbot

./: .gitignore  BIDIRECTIONAL_CONTROL_README.md  BasicMATLABWorkflows.mlx  CMakeLists.txt  COMPLETE_SETUP_GUIDE.md  DEFAULT_FASTRTPS_PROFILE.xml  Dockerfile  QUICK_REFERENCE.md  README.md  ROS2BridgeClient.m  SIMULINK_SETUP_INSTRUCTIONS.md  UPDATE_SUMMARY.md  bridge_config.yaml  build.sh  colcon.dcv  cyclonedds_config_windows.xml  docker-compose.yml  docker_startup.sh  entrypoint.sh  imav_automation.ps1  manualControl.slxc  matlab_drone_workflows.m  monitor_topics.sh  pathFollowingWithObstacleAvoidance1.slxc  ros2_tcp_bridge.py  run.sh  run_docker.bash  run_docker_gpu.bash  run_gzb.sh  setup.py  setup_matlab_ros2.m  setup_simulink_ros2.m  start_uav.sh  test_bidirectional_control.m  trasnlate to english and make a ros2, gazebo in vi.md
+bus_conv_fcns/+ros2/+busToMsg/: RefCachedMap.mat
+bus_conv_fcns/+ros2/+msgToBus/: RefCachedMap.mat
Simulink/: .MATLABDriveTag  pathFollowingWithObstacleAvoidance.slx  pathFollowingWithObstacleAvoidance.slx.err  pathFollowingWithObstacleAvoidance.slx.original  pathFollowingWithObstacleAvoidance.slxc  pathFollowingWithObstacleAvoidance1.slxc
Simulink/+bus_conv_fcns/: .MATLABDriveTag
Simulink/+bus_conv_fcns/+ros/: .MATLABDriveTag
Simulink/+bus_conv_fcns/+ros/+busToMsg/: .MATLABDriveTag  (+1 more)
imav_2017.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
install/: local_setup.sh  setup.sh
launch/: imav_indoor.py  spawn_quadrotor.py
plugins/: CMakeLists.txt
plugins/include/: quadrotor_simple_controller.h
plugins/src/: quadrotor_simple_controller.cpp
resource/: imav_2017
scripts/: __init__.py  ps2cmd_vel.py  quadrotor_controller.py
slprj/_cgxe/pathFollowingWithObstacleAvoidance1/: pathFollowingWithObstacleAvoidance1_Cache.mat
slprj/_jitprj/: dlBDCYsZRGqtXU9Q89z60D.l  dlBDCYsZRGqtXU9Q89z60D.mat  jitEngineAccessInfo.mat  s1bGGraDDAHqm2DniG071cC.l  s1bGGraDDAHqm2DniG071cC.mat  s4qxJAd6Q3i1IMjY1sFhFED.l  s4qxJAd6Q3i1IMjY1sFhFED.mat  s933hlM1YgdbD6aVjsIUKSB.l  s933hlM1YgdbD6aVjsIUKSB.mat  sSMglZ2iONWsByBgqYbQivD.l  sSMglZ2iONWsByBgqYbQivD.mat  sczfRGiYfdOMkfWfMXFXXWH.l  sczfRGiYfdOMkfWfMXFXXWH.mat  shqrzWepH75ugeu2eJPmw2F.l  shqrzWepH75ugeu2eJPmw2F.mat  vHsywIGQFk5RBLjZwZ5KOE.l  vHsywIGQFk5RBLjZwZ5KOE.mat
slprj/_sfprj/EMLReport/: F06Qc5MbUhaoJ1BZpwYjqH.mat  F1vroVX9ltbNvGYiMWgUxC.mat  emlReportAccessInfo.mat  qHG8mikr6syypAGyujazNG.mat  s1bGGraDDAHqm2DniG071cC.mat  s4qxJAd6Q3i1IMjY1sFhFED.mat  s933hlM1YgdbD6aVjsIUKSB.mat  sSMglZ2iONWsByBgqYbQivD.mat  sczfRGiYfdOMkfWfMXFXXWH.mat  shqrzWepH75ugeu2eJPmw2F.mat
slprj/_sfprj/manualControl/: amsi_serial.mat
slprj/_sfprj/pathFollowingWithObstacleAvoidance1/: amsi_serial.mat
slprj/_sfprj/precompile/: 8HTLkKPM9pTTNvaHdvMYd.mat  XGFXzcBndilCDRiOBWiYKG.mat  aWifKIhn2QN45jkGSMkWk.mat  autoInferAccessInfo.mat  h6daEchmhzZGrTaf7YvwzE.mat  pJeRNLHGkoXKoNeQfZokvG.mat
slprj/modeladvisor/pathFollowingWithObstacleAvoidance/: ModelAdvisorData
urdf/: quadrotor.urdf.xacro  quadrotor_base.urdf.xacro
urdf/sensors/: generic_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  quadrotor_sensors.urdf.xacro  sonar_sensor.urdf.xacro
worlds/xacro/: imav_indoor.world.xacro  macros.urdf.xacro
(+21 files in other folders)
